--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "chroma-js": "2.4.2",
     "dayjs": "^1.11.11",
     "file-saver": "^2.0.5",
+    "highlight.js": "^11.9.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "mark.js": "^8.11.1",
     "prop-types": "^15.8.1",
     "react": ">=16.8.0",
     "react-chartjs-2": "3.0.5",
@@ -36,6 +40,7 @@
     "react-flatpickr": "3.10.13",
     "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.5",
     "stylis": "4.2.0",
     "stylis-plugin-rtl": "2.1.1",
     "uuid": "9.0.0",
